# RequiemBot

./: .env-example  .gitignore  README.md  pyproject.toml  setup.py
requiembot/: __init__.py  __main__.py  exprs.py  lexer.py  parser.py
